# wayland-ivi-extension

./: .gitignore  README
ivi-input-modules/ivi-input-controller/src/: ivi-input-controller.c
ivi-layermanagement-api/ilmControl/src/: ilm_control_wayland_platform.c
ivi-layermanagement-examples/layer-add-surfaces/src/: layer-add-surfaces.c
ivi-layermanagement-examples/multi-touch-viewer/include/: window.h
ivi-layermanagement-examples/multi-touch-viewer/src/: multi-touch-viewer.c  window.c
unittest/: CMakeLists.txt  code_coverage.sh
unittest/client/: CMakeLists.txt
unittest/client/include/: client_api_fake.h  ilm_control_base_class.hpp
unittest/client/src/: client_api_fake.c  ilm_common_unittests.cpp  ilm_control_base_class.cpp  ilm_control_unittests.cpp  ilm_input_uinttests.cpp
unittest/common/: common_fake_api.c  common_fake_api.h
unittest/server/: CMakeLists.txt
unittest/server/include/: ivi_controller_base_class.hpp  ivi_id_agent_base_class.hpp  ivi_input_controller_base_class.hpp  ivi_layout_interface_fake.h  ivi_layout_structure.hpp  server_api_fake.h
unittest/server/src/: ivi_controller_base_class.cpp  ivi_controller_uinttests.cpp  ivi_id_agent_base_class.cpp  ivi_id_agent_unittests.cpp  ivi_input_controller_base_class.cpp  ivi_input_controller_uinttests.cpp  ivi_layout_interface_fake.c  server_api_fake.c
weston-ivi-shell/src/: ivi-controller.c
